[project]
name = "tunnelvision"
version = "0.3.4"
readme = "README.md" # Optional, if you have a README file
requires-python = ">=3.12" # Optional, specify your Python version compatibility
dependencies = [
    "dataclasses==0.8",
    "numpy",
    "packaging",
    "PyYAML==6.0.2",
    "tabulate==0.9.0",
    "termcolor==3.1.0",
    "websockets==15.0.1",
    "shortuuid==1.0.13",
    "ipykernel>=6.29.5",
    "requests",
    "pyvoxel>=0.0.2",
]

[build-system]
requires = ["setuptools>=61.0"] # Or hatchling, flit, etc.
build-backend = "setuptools.build_meta" #

[tool.black]
line-length = 100
exclude = '(\.eggs|\.git|\.github|.ipynb)'
